--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,64 @@
 .App {
-  text-align: center;
+    padding: 20px 40px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.shoes__container {
+    width: 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.shoes__container h1 {
+    margin-left: 1%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.shoes-tile__container {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    align-content: flex-start;
 }
 
-.App-link {
-  color: #61dafb;
+.tile {
+    flex: 0 0 31%;
+    margin: 1%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.tile__container {
+    width: fit-content;
+    height: fit-content;
+    position: relative;
+}
+
+.tile__gradient::after {
+    display: block;
+    position: relative;
+    background-image: linear-gradient(
+        to bottom,
+        rgba(255, 255, 255, 0) 0,
+        #fff 100%
+    );
+    margin-top: -150px;
+    height: 150px;
+    width: 100%;
+    content: "";
+}
+
+.tile__container img {
+    width: 100%;
+}
+
+.tile__info {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    padding: 10px;
+}
+
+.tile__info h2 {
+    font-size: 14px;
+    margin-bottom: 0;
+}
+
+.tile__info p {
+    margin-top: 0;
+    font-size: 14px;
 }
