Cart logic and redux restructure

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,11 @@
     padding: 20px 40px;
 }
 
+.App-header {
+    display: flex;
+    justify-content: space-between;
+}
+
 .shoes__container {
     width: 100%;
 }
@@ -18,11 +23,12 @@
 }
 
 .tile {
-    flex: 0 0 31%;
-    margin: 1%;
+    flex: 0 0 32.3%;
+    margin: 0.5%;
 }
 
 .tile__container {
+    width: 100%;
     width: fit-content;
     height: fit-content;
     position: relative;
@@ -49,7 +55,7 @@
 .tile__info {
     position: absolute;
     bottom: 0;
-    width: 100%;
+    width: fit-content;
     padding: 10px;
 }
 
@@ -60,5 +66,44 @@
 
 .tile__info p {
     margin-top: 0;
+    margin-bottom: 5px;
     font-size: 14px;
+}
+
+.tile__button {
+    position: absolute;
+    right: 10px;
+    bottom: 15px;
+    width: fit-content;
+}
+
+.tile__button button {
+    cursor: pointer;
+    width: 125px;
+    padding: 10px;
+    border: none;
+    background-color: black;
+    color: white;
+    border-radius: 100px;
+    outline: none;
+}
+
+.tile__container button:hover {
+    background-color: rgb(46, 46, 46);
+}
+
+.cart__container {
+    width: 100px;
+    position: relative;
+}
+
+.cart__container p {
+    position: absolute;
+    bottom: 5px;
+    right: 5px;
+    cursor: pointer;
+}
+
+.cart__container p:hover {
+    text-decoration: underline;
 }
