--- a/src/App.css
+++ b/src/App.css
@@ -107,3 +107,66 @@
 .cart__container p:hover {
     text-decoration: underline;
 }
+
+.ui.scrolling.modal {
+    margin: 20px;
+}
+
+.cart__content .cart-item__container {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+    border-bottom: 1px solid lightgray;
+}
+
+.cart-item__thumbnail {
+    width: 125px;
+}
+
+.cart-item__thumbnail img {
+    width: 125px;
+}
+
+.cart-item__info {
+    padding-top: 5px;
+    margin-left: 20px;
+}
+
+.cart-item__info div {
+    display: flex;
+}
+
+.cart-item__info p,
+.cart-item__info h3 {
+    font-size: 18px;
+    line-height: 28px;
+    margin: 0 10px 0 0;
+}
+
+.cart-item__remove,
+.cart-item__add {
+    font-size: 18px;
+    cursor: pointer;
+    border: none;
+    outline: none;
+    background-color: transparent;
+}
+
+.cart-item__remove:hover {
+    color: red;
+}
+
+.cart-item__add:hover {
+    color: green;
+}
+
+.cart-item__price {
+    padding-top: 5px;
+    text-align: right;
+    flex-grow: 4;
+}
+
+.cart__total {
+    padding: 10px;
+    text-align: right;
+}
