--- a/src/App.css
+++ b/src/App.css
@@ -1,172 +1,24 @@
+@import url("./css/cart.css");
+@import url("./css/shoes.css");
+
 .App {
     padding: 20px 40px;
 }
 
 .App-header {
+    margin: 0 1%;
     display: flex;
-    justify-content: space-between;
+    flex-direction: row-reverse;
+    height: 30px;
+    /* justify-content: space-between; */
 }
 
-.shoes__container {
-    width: 100%;
-}
-
-.shoes__container h1 {
-    margin-left: 1%;
-}
-
-.shoes-tile__container {
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    align-content: flex-start;
-}
-
-.tile {
-    flex: 0 0 32.3%;
-    margin: 0.5%;
-}
-
-.tile__container {
-    width: 100%;
-    width: fit-content;
-    height: fit-content;
-    position: relative;
-}
-
-.tile__gradient::after {
-    display: block;
-    position: relative;
-    background-image: linear-gradient(
-        to bottom,
-        rgba(255, 255, 255, 0) 0,
-        #fff 100%
-    );
-    margin-top: -150px;
-    height: 150px;
-    width: 100%;
-    content: "";
-}
-
-.tile__container img {
-    width: 100%;
-}
-
-.tile__info {
-    position: absolute;
-    bottom: 0;
-    width: fit-content;
-    padding: 10px;
-}
-
-.tile__info h2 {
-    font-size: 14px;
-    margin-bottom: 0;
-}
-
-.tile__info p {
-    margin-top: 0;
-    margin-bottom: 5px;
-    font-size: 14px;
-}
-
-.tile__button {
-    position: absolute;
-    right: 10px;
-    bottom: 15px;
-    width: fit-content;
-}
-
-.tile__button button {
-    cursor: pointer;
-    width: 125px;
-    padding: 10px;
-    border: none;
-    background-color: black;
-    color: white;
-    border-radius: 100px;
+.search-input {
+    margin-right: 1%;
+    width: 200px;
     outline: none;
-}
-
-.tile__container button:hover {
-    background-color: rgb(46, 46, 46);
-}
-
-.cart__container {
-    width: 100px;
-    position: relative;
-}
-
-.cart__container p {
-    position: absolute;
-    bottom: 5px;
-    right: 5px;
-    cursor: pointer;
-}
-
-.cart__container p:hover {
-    text-decoration: underline;
-}
-
-.ui.scrolling.modal {
-    margin: 20px;
-}
-
-.cart__content .cart-item__container {
-    display: flex;
-    justify-content: space-between;
-    padding: 10px;
-    border-bottom: 1px solid lightgray;
-}
-
-.cart-item__thumbnail {
-    width: 125px;
-}
-
-.cart-item__thumbnail img {
-    width: 125px;
-}
-
-.cart-item__info {
-    padding-top: 5px;
-    margin-left: 20px;
-}
-
-.cart-item__info div {
-    display: flex;
-}
-
-.cart-item__info p,
-.cart-item__info h3 {
-    font-size: 18px;
-    line-height: 28px;
-    margin: 0 10px 0 0;
-}
-
-.cart-item__remove,
-.cart-item__add {
-    font-size: 18px;
-    cursor: pointer;
-    border: none;
-    outline: none;
-    background-color: transparent;
-}
-
-.cart-item__remove:hover {
-    color: red;
-}
-
-.cart-item__add:hover {
-    color: green;
-}
-
-.cart-item__price {
-    padding-top: 5px;
-    text-align: right;
-    flex-grow: 4;
-}
-
-.cart__total {
-    padding: 10px;
-    text-align: right;
+    border: 1px solid gray;
+    border-radius: 4px;
+    padding: 0 10px;
+    height: 35px;
 }
