--- a/src/css/shoes.css
+++ b/src/css/shoes.css
@@ -8,8 +8,23 @@
     width: 100%;
 }
 
-.shoes__container h1 {
-    margin: 1%;
+.shoes__header h1 {
+    margin: 5px;
+}
+
+.search-input {
+    margin-right: 5px;
+    width: 200px;
+    outline: none;
+    border: 1px solid gray;
+    border-radius: 4px;
+    padding: 0 10px;
+    height: 35px;
+}
+
+.shoes__no-results {
+    width: fit-content;
+    margin: 100px auto;
 }
 
 .shoes-tile__container {
@@ -19,16 +34,18 @@
     align-content: flex-start;
 }
 
-.tile {
-    flex: 0 0 32.3%;
-    margin: 0.5%;
-}
-
 .tile__container {
+    flex: 1 0 32%;
+    margin: 5px;
     width: 100%;
     width: fit-content;
     height: fit-content;
     position: relative;
+}
+
+.flex-empty {
+    flex: 1 0 32%;
+    margin: 5px;
 }
 
 .tile__gradient::after {
@@ -83,8 +100,11 @@
     color: white;
     border-radius: 100px;
     outline: none;
+    transform: scale(1);
+    transition: transform 0.2s;
 }
 
-.tile__container button:hover {
+.tile__button button:hover {
     background-color: rgb(46, 46, 46);
+    transform: scale(1.05);
 }
